fixing assert and button spacing

--- a/assets/styles/button.css
+++ b/assets/styles/button.css
@@ -15,6 +15,10 @@ button * {
     vertical-align: middle;
 }
 
+button:not(.button--link) + button:not(.button--link) {
+    margin-left: var(--spacing-xsmall);
+}
+
 button,
 .tag-elem {
     border-radius: 200px;
